--- a/ocsweb/src/main/resources/persistence-mysql.properties
+++ b/ocsweb/src/main/resources/persistence-mysql.properties
@@ -10,22 +10,22 @@
 
 #
 # JDBC connection properties 
-# DEMO
-#
-# jdbc.driver=com.mysql.jdbc.Driver
-# jdbc.url=jdbc:mysql://192.168.11.210:3306/ocs
-# jdbc.user=root
-# jdbc.password=Mobi7548
+ DEMO
+
+ jdbc.driver=com.mysql.jdbc.Driver
+ jdbc.url=jdbc:mysql://192.168.11.210:3306/ocs
+ jdbc.user=root
+ jdbc.password=Mobi7548
 
 #
 # JDBC connection properties 
 # LIVE
 #
 
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://192.168.10.203:3306/mobiversa
-jdbc.user=ezywirepay
-jdbc.password=MQ711ZLW4UI1VPX2
+#jdbc.driver=com.mysql.jdbc.Driver
+#jdbc.url=jdbc:mysql://192.168.10.203:3306/mobiversa
+#jdbc.user=ezywirepay
+#jdbc.password=MQ711ZLW4UI1VPX2
 
 #
 # Connection pool properties
